--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         </header>
         <main>
          <nav>
-             <a href="#" class="back">повернутись</a>  
+             <a href="https://poliest191.github.io/school1/" class="back">повернутись</a>  
              
         </nav>
             <div>
